# 37-cpp-order-gateway-distribution

./: CMakeLists.txt  LICENSE  README.md  config.json
include/: distribution_gateway.h
src/: distribution_gateway.cpp  main.cpp
